# machinelearning

./: README.md  basic_commands_prac.py  gradientdescent.py
cli-data-pipeline/: README.md
cli-data-pipeline/src/: loader.py
data-cleaning/: clean-titanic.py
gradientdescent/: gradientdescent.py
imagenet-classification-project/: imagenet_classification.py
linear-algebra/: vectorprac.py
ltsm_networks/: ltsm_network.py
ml-forge/: README.md  pyproject.toml
ml-forge/configs/: titanic.yaml
practice/: attentionprac.py
sleep-ml-project/: README.md  changelog.md  data_validation.py  journal.md  sleep_classification.py
