[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ml-forge"
version = "0.1.0"
description = "A production-grade, dataset-agnostic ML pipeline"
requires-python = ">=3.11"

dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.4",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "typer>=0.9",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "structlog>=23.2",
    "mlflow>=2.9",
    "great-expectations>=0.18",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "pre-commit>=3.6",
]

[project.scripts]
ml-forge = "ml_forge.cli:app"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]